[gd_scene load_steps=15 format=3 uid="uid://cndfgrty0n2nm"]

[ext_resource type="Script" path="res://main.gd" id="1_k6orx"]
[ext_resource type="PackedScene" uid="uid://ejh5k8pj06qs" path="res://component.tscn" id="2_n1b6a"]
[ext_resource type="PackedScene" uid="uid://pxiyat8003a4" path="res://cable.tscn" id="3_jg5ha"]
[ext_resource type="Texture2D" uid="uid://cc3rtuds6kj1s" path="res://icon.svg" id="4_it4mo"]
[ext_resource type="PackedScene" uid="uid://baff0s7kb2sb8" path="res://trash_can.tscn" id="5_83i7a"]
[ext_resource type="PackedScene" uid="uid://bc4gq71brflk6" path="res://hud.tscn" id="6_a08vb"]
[ext_resource type="PackedScene" uid="uid://de7g00ev2mxbf" path="res://test_connection_window.tscn" id="7_qiog6"]

[sub_resource type="LabelSettings" id="LabelSettings_2kifb"]
font_size = 19
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_38thq"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xl2je"]
font_size = 19
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xypnq"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_inp8a"]
font_size = 19
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_01mwq"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvn8k"]
size = Vector2(512, 512)

[node name="main" type="Node2D"]
script = ExtResource("1_k6orx")
component_node = ExtResource("2_n1b6a")
cable_node = ExtResource("3_jg5ha")

[node name="hostButton" type="Button" parent="."]
offset_right = 136.0
offset_bottom = 136.0
icon = ExtResource("4_it4mo")

[node name="hostTextLabel" type="Label" parent="hostButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 127.0
offset_bottom = 73.0
text = "Host"
label_settings = SubResource("LabelSettings_2kifb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="hostCountLabel" type="Label" parent="hostButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 75.0
offset_right = 135.0
offset_bottom = 98.0
label_settings = SubResource("LabelSettings_38thq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cableButton" type="Button" parent="."]
offset_top = 150.0
offset_right = 136.0
offset_bottom = 286.0
icon = ExtResource("4_it4mo")

[node name="cableTextLabel" type="Label" parent="cableButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 127.0
offset_bottom = 73.0
text = "Cable"
label_settings = SubResource("LabelSettings_xl2je")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cableCountLabel" type="Label" parent="cableButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 75.0
offset_right = 135.0
offset_bottom = 98.0
label_settings = SubResource("LabelSettings_xypnq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="routerButton" type="Button" parent="."]
offset_top = 300.0
offset_right = 136.0
offset_bottom = 436.0
icon = ExtResource("4_it4mo")

[node name="routerTextLabel" type="Label" parent="routerButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 127.0
offset_bottom = 73.0
text = "Router"
label_settings = SubResource("LabelSettings_inp8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="routerCountLabel" type="Label" parent="routerButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 75.0
offset_right = 135.0
offset_bottom = 98.0
label_settings = SubResource("LabelSettings_01mwq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(576, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jvn8k")
disabled = true

[node name="TopLeftMarker" type="Marker2D" parent="Area2D"]
position = Vector2(-256, -256)

[node name="BottomRightMarker" type="Marker2D" parent="Area2D"]
position = Vector2(256, 256)

[node name="trash_can" parent="." instance=ExtResource("5_83i7a")]
position = Vector2(1058, 565)

[node name="HUD" parent="." instance=ExtResource("6_a08vb")]

[node name="test_connection_window" parent="." instance=ExtResource("7_qiog6")]
position = Vector2(842, 0)

[connection signal="pressed" from="hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="pressed" from="cableButton" to="." method="_on_cable_button_pressed"]
[connection signal="pressed" from="routerButton" to="." method="_on_router_button_pressed"]
